# CSCI3260-Computer-Graphics

./: .gitignore  README.md
HW1/: README.txt  main.cpp
HW1/proj/Project1/: Project1.sln
HW1/proj/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters
HW1/proj/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
HW1/proj/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW1/win/: main.cpp
HW2/Project1/: .editorconfig  Project1.sln
HW2/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  Shader.cpp  main.cpp  readme.txt
HW2/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
HW2/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW4/: Readme.md
HW4/hw4/: student_code.cpp
HW4/win/: CMakeLists.txt  Shader.cpp  Shader.h  bezier3.bzc  bezierCurve.cpp  bezierCurve.h  bezierPatch.cpp  bezierPatch.h  main.cpp  mesh.cpp  mesh.h  readme.txt  renderer.h  viewer.cpp  viewer.h
demo_RenderTriangle/mac/: main.cpp
